<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="950dp"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="44dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/mailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/blanco"

                    android:contentDescription="todo"
                    app:srcCompat="@drawable/ic_baseline_mail_outline_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/enterEmail"
                    android:layout_width="244dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_your_e_mail"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/enterPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                app:cardCornerRadius="5dp">

                <ImageButton
                    android:id="@+id/lockIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/blanco"

                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_baseline_lock_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

                <EditText
                    android:id="@+id/edt1"
                    android:layout_width="244dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_your_e_mail"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/lockIcon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/blanco"

                    app:srcCompat="@drawable/ic_baseline_visibility_off_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingEnd="50dp"
                android:text="@string/forgot_password"
                android:textAlignment="viewEnd"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnSerie2"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/mostaza"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingEnd="50dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="-30dp"
                android:paddingTop="10dp"
                android:paddingEnd="50dp"
                android:text="Register"
                android:textAlignment="textEnd"
                android:textColor="@color/mostaza"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blanco"
                android:text="@string/skip"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:elevation="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imglogin" />

</androidx.constraintlayout.widget.ConstraintLayout>