<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Hbo2Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="100sp">

                <ImageView
                    android:id="@+id/imgVHbo2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    tools:src="@drawable/hbo2"
                    app:srcCompat="@drawable/hbo2"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewRM"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/rickMorty" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="15sp">

                        <ImageView
                            android:id="@+id/actor1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/rick"
                            />

                        <TextView
                            android:id="@+id/actorDescRick"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="100dp"
                            android:text="@string/rickSerie" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        app:cardCornerRadius="15sp">

                        <ImageView
                            android:id="@+id/actor2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/hbo4actor"
                             />

                        <TextView
                            android:id="@+id/actorDescMorty"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="100dp"
                            android:text="@string/morty" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                tools:src="@drawable/hbo2portada"
                app:srcCompat="@drawable/hbo2portada"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>